added horizontal lists and more styling

--- a/docs/REPORT_INITIAL.tex
+++ b/docs/REPORT_INITIAL.tex
@@ -137,73 +137,73 @@ Student 4 tts1848: Emi Simpson\\
 
     \begin{itemize}
         \item Album Attributes
-            \begin{itemize}
-                \item album\_id
-                \item name
-                \item release\_date
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] album\_id
+                \task[$-$] name
+                \task[$-$] release\_date
+            \end{tasks}
         \item Album\_Artist Attributes
-            \begin{itemize}
-                \item album\_id
-                \item artist\_id
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] album\_id
+                \task[$-$] artist\_id
+            \end{tasks}
         \item Album\_Song Attributes
-            \begin{itemize}
-                \item album\_id
-                \item sid
-                \item track\_number
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] album\_id
+                \task[$-$] sid
+                \task[$-$] track\_number
+            \end{tasks}
         \item Artist Attributes
-            \begin{itemize}
-                \item artist\_id
-                \item name
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] artist\_id
+                \task[$-$] name
+            \end{tasks}
         \item Collection Attributes
-            \begin{itemize}
-                \item cid
-                \item name
-                \item uid
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] cid
+                \task[$-$] name
+                \task[$-$] uid
+            \end{tasks}
         \item Follower Attributes
-            \begin{itemize}
-                \item follower
-                \item followed
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] follower
+                \task[$-$] followed
+            \end{tasks}
         \item Play Attributes
-            \begin{itemize}
-                \item uid
-                \item sid
-                \item timestamp
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] uid
+                \task[$-$] sid
+                \task[$-$] timestamp
+            \end{tasks}
         \item Song Attributes
-            \begin{itemize}
-                \item sid
-                \item length
-                \item title
-                \item genre
-                \item release\_date
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] sid
+                \task[$-$] length
+                \task[$-$] title
+                \task[$-$] genre
+                \task[$-$] release\_date
+            \end{tasks}
         \item Song\_Artist Attributes
-            \begin{itemize}
-                \item sid
-                \item artist\_id
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] sid
+                \task[$-$] artist\_id
+            \end{tasks}
         \item Song\_Collection Attributes
-            \begin{itemize}
-                \item sid
-                \item cid
-            \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] sid
+                \task[$-$] cid
+            \end{tasks}
         \item User Attributes
-        \begin{itemize}
-            \item uid
-            \item username
-            \item password
-            \item fname
-            \item lname
-            \item email
-            \item last\_login
-            \item creation\_date
-        \end{itemize}
+            \begin{tasks}[style=itemize, column-sep= 25mm, label-align=left, label-offset={2mm}, label-width={3mm}, item-indent={10mm}](4)
+                \task[$-$] uid
+                \task[$-$] username
+                \task[$-$] password
+                \task[$-$] fname
+                \task[$-$] lname
+                \task[$-$] email
+                \task[$-$] last\_login
+                \task[$-$] creation\_date
+            \end{tasks}
     \end{itemize}
 
     \subsection{Sample instance data}
