--- a/docs/REPORT_INITIAL.tex
+++ b/docs/REPORT_INITIAL.tex
@@ -750,6 +750,168 @@ Student 4 tts1848: Emi Simpson\\
     Finally, add an appendix of all the SQL statements
     created in your application during Phase 4 and a description of the indexes created to
     boost the performance of your application.
+    
+    Selecting the top 10 artists for a user:
+    \lstset{
+        frame=tb,
+        language=Java,
+        aboveskip=3mm,
+        belowskip=3mm,
+        showstringspaces=false,
+        columns=flexible,
+        basicstyle=\ttfamily,
+        numbers=none,
+        numberstyle=\tiny\color{gray},
+        keywordstyle=\color{javapurple}\bfseries,
+        commentstyle=\color{javagreen},
+        stringstyle=\color{javared},
+        breaklines=true,
+        breakatwhitespace=true,
+        tabsize=4
+    }
+    \begin{lstlisting}
+    //select user's top 10 artists
+    Statement stmt = conn.createStatement();
+    ResultSet rs = stmt.executeQuery("select distinct s.artist_id, count(s.artist_id) as total, a.name " +
+        "from p320_12.play p, p320_12.song_artist s, p320_12.artist a " +
+        "where p.sid = s.sid and p.uid = " + uid + " and a.artist_id = s.artist_id " +
+        "group by s.artist_id, a.name " +
+        "order by total desc " +
+        "limit 10");
+    System.out.println("Artist Name | Total Artist Plays");
+    while( rs.next() ){
+        System.out.println(rs.getString("name") + " | " + rs.getInt("total"));
+    }
+    \end{lstlisting}
+    
+    Retrieving the count of how many people follow and are followed by a user:
+    
+    \being{lstlisting}
+    //getting the amount of people the user follows
+    Statement stmt = conn.createStatement();
+    ResultSet rs = stmt.executeQuery("select count(f) as fol from p320_12.follower f where f.follower = '"+uid+"'" );
+    if( rs.next() ){
+        followers = rs.getInt("fol");
+    }
+    
+    //getting the amount of people followed by the user
+    Statement stmt = conn.createStatement();
+    ResultSet rs = stmt.executeQuery("select count(f) as fol from p320_12.follower f where f.followed = '"+uid+"'" );
+    if( rs.next() ){
+        followed = rs.getInt("fol");
+    }
+    \end{lstlisting}
+    
+    A minor edit to the view collections function to get the amount of collections a user has:
+    
+    \being{lstlisting}
+    Statement stmt3 = conn.createStatement();
+    ResultSet total = stmt3.executeQuery("select count(cid) as total from p320_12.collection where p320_12.collection.uid = " + uid );
+
+    if( total.next() && printing ) {
+        System.out.println("Total collections: " + total.getInt("total"));
+    }
+    \end{lstlisting}
+    
+    Recommeding the 5 most popular genres of the month for the user:
+    
+    \being{lstlisting}
+    PreparedStatement stmt = c.prepareStatement(
+        "SELECT genre " +
+        "FROM p320_12.play " +
+        "JOIN p320_12.song USING (sid) " +
+        "WHERE age(timestamp) < INTERVAL '1 month' " +
+        "GROUP BY genre " +
+        "ORDER BY COUNT(*) DESC " +
+        "LIMIT 5;"
+    );
+    ResultSet rs = stmt.executeQuery();
+    \end{lstlisting}
+    
+    
+    
+    Recommending by 50 most popular songs of the month, 50 most popular songs among a friend, 50 most popular among a genre, and 50 most popular to the user:
+    (Note: Question marks are replaced by user input parameters before the SQL is called)
+    \being{lstlisting}
+    switch(this) {
+        case Month:
+            // No args
+            return
+                "SELECT sid, title " +
+                "FROM p320_12.play " +
+                "JOIN p320_12.song USING (sid) " +
+                "WHERE timestamp > CURRENT_TIMESTAMP - INTERVAL '1 month' " +
+                "GROUP BY sid, title " +
+                "ORDER BY COUNT(*) DESC " +
+                "LIMIT 50;";
+        case Friends:
+            // 1 arg: uid
+            return
+                "SELECT sid, title " +
+                "FROM p320_12.follower "+
+                "JOIN p320_12.play "+
+                    "ON play.uid = followed " +
+                "JOIN p320_12.song " +
+                    "USING (sid) " +
+                "WHERE follower = ? " +
+                    "AND age(timestamp) < INTERVAL '1 month' " +
+                "GROUP BY sid, title " +
+                "ORDER BY COUNT(*) DESC " +
+                "LIMIT 50;";
+        case Genres:
+            // 1 arg: genre
+            return
+                "SELECT sid, title " +
+                "FROM p320_12.play " +
+                "JOIN p320_12.song " +
+                    "USING (sid) " +
+                "WHERE genre = ? " +
+                    "AND age(timestamp) < interval '1 month' " +
+                "GROUP BY sid, title " +
+                "ORDER BY COUNT(*) DESC " +
+                "LIMIT 50;";
+        case Personal:
+            // 1 arg: uid
+            return
+                "SELECT sid, title " +
+                "FROM p320_12.recommendations(?) " +
+                "JOIN p320_12.song " +
+                    "USING (sid) " +
+                "LIMIT 50;";
+    }
+    \end{lstlisting}
+    
+    Display a recommended songs info:
+    
+    \being{lstlisting}
+    PreparedStatement stmt = c.prepareStatement(
+        "SELECT title, length, genre, track_number, album.name, artist.name, mbid " +
+        "FROM p320_12.song " +
+        "JOIN p320_12.album_song USING (sid) " +
+        "JOIN p320_12.album USING (album_id) " +
+        "LEFT JOIN p320_12.song_artist USING (sid) " +
+        "LEFT JOIN p320_12.artist USING (artist_id) " +
+        "LEFT JOIN p320_12.album_mbid USING (album_id) " +
+        "WHERE sid = ?;"
+    );
+    stmt.setInt(1, this.selectedSong);
+    ResultSet result = stmt.executeQuery();
+    \end{lstlisting}
+    
+    
+    Play a recommended song:
+    
+    \being{lstlisting}
+    PreparedStatement stmt = c.prepareStatement(
+        "INSERT INTO p320_12.play VALUES (?, ?, CURRENT_TIMESTAMP);"
+    );
+    stmt.setInt(1, this.uid);
+    stmt.setInt(2, this.selectedSong);
+    stmt.execute();
+    \end{lstlisting}
+    
+    
+    
     \subsection{Hypothesis}
     Use this section to state the objectives of your data analysis; what are the observations you are expecting to find. Note that your final
     observations may end up differing from your proposal, that is also a valid result.
