--- a/docs/REPORT_INITIAL.tex
+++ b/docs/REPORT_INITIAL.tex
@@ -980,4 +980,12 @@ Student 4 tts1848: Emi Simpson\\
     \section{Resources}
     Include in this section the resources you have used in your project beyond the normal code development such as data sets or data analytic tools (i.e. Weka, R).
 
+    We used last.fm and linked it to our spotify accounts, so we could
+    get the data about our song plays onto last.fm. From there, we made
+    it so you can connect your last.fm to the database, to upload new music
+    and fill your plays from last.fm itself. Additionally, due to plays
+    being publically available on last.fm, we are able to upload the
+    database with plays from long established users on last.fm who
+    have plenty of data to upload and then analyze.
+
 \end{document}
